--- a/index.html
+++ b/index.html
@@ -415,20 +415,7 @@
             <i class="material-icons-round">help_center</i>
             <p>Guides & FAQ</p>
           </a>
-        </li>
-        <li class="nav-item" id="xdaiFarm">
-          <a class="nav-link" href="https://unifty.io/xdai/farm-view.html?address=0x87E5aFba16E3BEbd967699B4D5472B2ae1AA8Fa7">
-            <i class="material-icons">grass</i>
-            <p>Rares Farm - NIF (xDai)</p>
-          </a>
-        </li>
 
-        <li class="nav-item" id="genesisFarm">
-          <a class="nav-link" href="https://unifty.io/farm.html?farm=0xA2c88A39b1DE8f1d723d9E76AD07f6012826d0f3">
-            <i class="material-icons">grass</i>
-            <p>Genesis Farm - NIF-LP</p>
-          </a>
-        </li>
       </ul>
 
       <div class="sidebar-divider"></div>
@@ -533,10 +520,7 @@
       
       <div class="content__welcome-text">
         <p>
-          Welcome to Unifty - world of decentralized freedom!
-          We are multi-chain infrastructure platform, focusing on the creator economy. Our main target is developing, and
-          enabling fully decentralized no-code solutions for creators, with all things, and services around the NFT space. Mint,
-          buy, sell, swap, and create NFTs and NFT farms with just a few clicks, while you are fully owning your contracts.
+          Welcome to Cloud9 - The coolest Family of NFT platforms in existence!
         </p>
         </div>
       <h1>Newsflash: Market Builder Released!</h1>
@@ -545,123 +529,18 @@
       <h1>Unifty Farms</h1>
       <h3 class="mb-5">Farms by the Unifty project itself</h3>
 
-      <div class="container-fluid featured-farms mb-5">
+ <!--     <div class="container-fluid featured-farms mb-5">
 
         <div class="card farm-card">
           <div class="card-header card-header-info card-header-icon">
             <div class="card-icon">
-              <img src="https://gateway.ipfs.io/ipfs/Qmb1GJr934XxAbjoYEvtmsAVUUBGn5qts8mQNsbsQfspDV">
-            </div>
-          </div>
-          <div class="card-body">
-            <h3 class="card-title">Liquidity Farm (Mainnet)</h3>
-            <a class="btn btn-primary card-toggler first-collapsed" data-toggle="collapse" href="#multiCollapseDesc19" role="button" aria-expanded="false" aria-controls="multiCollapseDesc19">
-              Read more...
-            </a>
-            <div class="collapse multi-collapse" id="multiCollapseDesc19">
-              <p class="card-description">
-                Support Unifty and take part in our awesome liquidity incentive!
-              </p>
-            </div>
-            <a class="btn btn-primary card-toggler first-collapsed" data-toggle="collapse" href="#multiCollapseLinks19" role="button" aria-expanded="false" aria-controls="multiCollapseLinks19">
-              Open Farms
-            </a>
-            <div class="collapse multi-collapse" id="multiCollapseLinks19">
-              <a class="card-link"
-                 href="https://unifty.io/farm-view.html?address=0xC6AD13d8862b64346bCa42e966d93e0BB4bFF9F8"><i
-                      class="fa fa-external-link"></i>Open Farm, Ethereum</a>
+             <img src="https://gateway.ipfs.io/ipfs/Qmb1GJr934XxAbjoYEvtmsAVUUBGn5qts8mQNsbsQfspDV">
+           </div>
+         </div>
 
             </div>
           </div>
-        </div>
-
-
-        <div class="card farm-card">
-          <div class="card-header card-header-info card-header-icon">
-            <div class="card-icon">
-              <img src="https://gateway.ipfs.io/ipfs/Qmb1GJr934XxAbjoYEvtmsAVUUBGn5qts8mQNsbsQfspDV">
-            </div>
-          </div>
-          <div class="card-body">
-            <h3 class="card-title">Liquidity Farm (BSC)</h3>
-            <a class="btn btn-primary card-toggler first-collapsed" data-toggle="collapse" href="#multiCollapseDesc20" role="button" aria-expanded="false" aria-controls="multiCollapseDesc20">
-              Read more...
-            </a>
-            <div class="collapse multi-collapse" id="multiCollapseDesc20">
-              <p class="card-description">
-                Support Unifty and take part in our awesome liquidity incentive!
-              </p>
-            </div>
-            <a class="btn btn-primary card-toggler first-collapsed" data-toggle="collapse" href="#multiCollapseLinks20" role="button" aria-expanded="false" aria-controls="multiCollapseLinks20">
-              Open Farms
-            </a>
-            <div class="collapse multi-collapse" id="multiCollapseLinks20">
-              <a class="card-link"
-                 href="https://unifty.io/bsc/farm-view.html?address=0xDf9ef53757687653d537Dd6726C2a9C239584dbE"><i
-                      class="fa fa-external-link"></i>Open Farm, BSC</a>
-
-            </div>
-          </div>
-        </div>
-
-
-        <div class="card farm-card">
-          <div class="card-header card-header-info card-header-icon">
-            <div class="card-icon">
-              <img src="https://unifty.io/assets/img/unifty2.png">
-            </div>
-          </div>
-          <div class="card-body">
-            <h3 class="card-title">Genesis NIF-LP Farm (Mainnet)</h3>
-            <a class="btn btn-primary card-toggler first-collapsed" data-toggle="collapse" href="#multiCollapseDesc21" role="button" aria-expanded="false" aria-controls="multiCollapseDesc21">
-              Read more...
-            </a>
-            <div class="collapse multi-collapse" id="multiCollapseDesc21">
-              <p class="card-description">
-                The very first Unifty farm. Stake NIF-LP for a variety of exclusive art and utility NFTs.
-              </p>
-            </div>
-            <a class="btn btn-primary card-toggler first-collapsed" data-toggle="collapse" href="#multiCollapseLinks21" role="button" aria-expanded="false" aria-controls="multiCollapseLinks21">
-              Open Farms
-            </a>
-            <div class="collapse multi-collapse" id="multiCollapseLinks21">
-              <a class="card-link"
-                 href="https://unifty.io/farm.html?farm=0xA2c88A39b1DE8f1d723d9E76AD07f6012826d0f3"><i
-                      class="fa fa-external-link"></i>Open Farm, Ethereum</a>
-
-            </div>
-          </div>
-        </div>
-
-
-        <div class="card farm-card">
-          <div class="card-header card-header-info card-header-icon">
-            <div class="card-icon">
-              <img src="https://unifty.io/assets/img/unifty2.png">
-            </div>
-          </div>
-          <div class="card-body">
-            <h3 class="card-title">Rares Farm (xDai)</h3>
-            <a class="btn btn-primary card-toggler first-collapsed" data-toggle="collapse" href="#multiCollapseDesc22" role="button" aria-expanded="false" aria-controls="multiCollapseDesc22">
-              Read more...
-            </a>
-            <div class="collapse multi-collapse" id="multiCollapseDesc22">
-              <p class="card-description">
-                Our rares farm exclusively on xDai. Watch out for new and rare pieces being dropped and be ready to grab them!<br/>
-                The NFTs may be bridged from xDai to Ethereum if desired by using our bridge.
-              </p>
-            </div>
-            <a class="btn btn-primary card-toggler first-collapsed" data-toggle="collapse" href="#multiCollapseLinks22" role="button" aria-expanded="false" aria-controls="multiCollapseLinks22">
-              Open Farms
-            </a>
-            <div class="collapse multi-collapse" id="multiCollapseLinks22">
-              <a class="card-link"
-                 href="https://unifty.io/xdai/farm-view.html?address=0x87E5aFba16E3BEbd967699B4D5472B2ae1AA8Fa7"><i
-                      class="fa fa-external-link"></i>Open Farm, xDai</a>
-
-            </div>
-          </div>
-        </div>
+        </div> -->
 
       </div>
 
@@ -680,7 +559,7 @@
             <img src="https://i.ibb.co/XC1gjWT/IMG-20210529-144740-605.jpg">
           </div>
         </div>
-        <div class="card-body">
+      <div class="card-body">
           <h3 class="card-title">Anime Token</h3>
           <a class="btn btn-primary card-toggler first-collapsed" data-toggle="collapse" href="#multiCollapseDesc33" role="button" aria-expanded="false" aria-controls="multiCollapseDesc33">
             Read more...
@@ -718,7 +597,7 @@
 
 
 
-        <div class="card farm-card">
+  <!--      <div class="card farm-card">
           <div class="card-header card-header-info card-header-icon">
             <div class="card-icon">
               <img src="https://slinkyfinance.xyz/img/200.png">
@@ -746,10 +625,10 @@
           </div>
         </div>
 
+-->
 
 
-
-
+<!--
         <div class="card farm-card">
           <div class="card-header card-header-info card-header-icon">
             <div class="card-icon">
@@ -781,12 +660,12 @@
             </div>
           </div>
         </div>
+-->
 
 
 
 
-
-
+<!--
         <div class="card farm-card">
           <div class="card-header card-header-info card-header-icon">
             <div class="card-icon">
@@ -815,13 +694,13 @@
           </div>
         </div>
 
+-->
 
 
 
 
 
-
-        <div class="card farm-card">
+   <!--     <div class="card farm-card">
           <div class="card-header card-header-info card-header-icon">
             <div class="card-icon">
               <img src="https://hubstract.art/farm.jpg">
@@ -851,9 +730,9 @@
 
             </div>
           </div>
-        </div>
+        </div> -->
 
-        <div class="card farm-card">
+  <!--      <div class="card farm-card">
           <div class="card-header card-header-info card-header-icon">
             <div class="card-icon">
               <img src="https://thecrypto.show/shownft.png">
@@ -880,11 +759,11 @@
 
             </div>
           </div>
-        </div>
+        </div> -->
 
 
 
-        <div class="card farm-card">
+         <!--        <div class="card farm-card">
           <div class="card-header card-header-info card-header-icon">
             <div class="card-icon">
               <img src="https://i.ibb.co/g7ngCBg/photo-2021-03-12-10-37-38.jpg">
@@ -910,7 +789,7 @@
 
             </div>
           </div>
-        </div>
+        </div> -->
 
         <!--
         <div class="card farm-card">
@@ -951,7 +830,7 @@
           </div>
         </div>-->
 
-        <div class="card farm-card">
+      <!--  <div class="card farm-card">
           <div class="card-header card-header-info card-header-icon">
             <div class="card-icon">
               <img src="https://unifty.io/assets/img/srn.jpg">
@@ -991,7 +870,7 @@
                       class="fa fa-external-link"></i>$SACT-BNB LP, BSC</a>
             </div>
           </div>
-        </div>
+        </div> -->
 
 <!--
         <div class="card farm-card">
@@ -1022,7 +901,7 @@
 
 
 
-        <div class="card farm-card">
+    <!--    <div class="card farm-card">
           <div class="card-header card-header-info card-header-icon">
             <div class="card-icon">
               <img src="https://pbs.twimg.com/profile_images/1362796116711010310/L-AEtKb-_400x400.jpg">
@@ -1081,10 +960,10 @@
             </div>
           </div>
         </div>
+-->
 
 
-
-        <div class="card farm-card">
+    <!--    <div class="card farm-card">
           <div class="card-header card-header-info card-header-icon">
             <div class="card-icon">
               <img src="https://img1.wsimg.com/blobby/go/33b3b78f-4f18-4d01-8a66-73cfe79c6dc2/downloads/bitsenji_LOGO.jpeg?ver=1617523409718">
@@ -1155,7 +1034,7 @@
         </div>-->
 
 
-        <div class="card farm-card">
+    <!--    <div class="card farm-card">
           <div class="card-header card-header-info card-header-icon">
             <div class="card-icon">
               <img src="https://degenerate.money/market/assets/img/unifty2.png">
@@ -1240,7 +1119,7 @@
 
             </div>
           </div>
-        </div>
+        </div> -->
 
 <!--
         <div class="card farm-card">
@@ -1274,7 +1153,7 @@
           </div>
         </div>-->
 
-        <div class="card farm-card">
+   <!--     <div class="card farm-card">
           <div class="card-header card-header-info card-header-icon">
             <div class="card-icon">
               <img src="https://unifty.io/assets/img/mcdc.jpg">
@@ -1510,7 +1389,7 @@
                           class="fa fa-external-link"></i>$HNY/$COLD LP RARES, xDai</a><br />
                       <!--<a class="card-link"
                         href="https://unifty.io/xdai/farm-view.html?address=0x5d004F2576465aEa90328bCcC219cC8b4873cC53"><i
-                          class="fa fa-external-link"></i>$COLD / NSFW!!, xDai</a><br />-->
+                          class="fa fa-external-link"></i>$COLD / NSFW!!, xDai</a><br />
                       <a class="card-link"
                         href="https://unifty.io/xdai/farm-view.html?address=0x305dc5048d9680d8b93a60Fd9f0054Bb0F6C5B19"><i
                           class="fa fa-external-link"></i>$COLD / Music, xDai</a><br />
@@ -1524,7 +1403,7 @@
                   </div>
                 </div>
               </div>
-
+-->
         <!--
               <div class="card farm-card">
                 <div class="card-header card-header-info card-header-icon">
