--- a/index.html
+++ b/index.html
@@ -529,9 +529,9 @@
       <h1>Unifty Farms</h1>
       <h3 class="mb-5">Farms by the Unifty project itself</h3>
 
- <!--     <div class="container-fluid featured-farms mb-5">
+      <div class="container-fluid featured-farms mb-5">
 
-        <div class="card farm-card">
+      <!--  <div class="card farm-card">
           <div class="card-header card-header-info card-header-icon">
             <div class="card-icon">
              <img src="https://gateway.ipfs.io/ipfs/Qmb1GJr934XxAbjoYEvtmsAVUUBGn5qts8mQNsbsQfspDV">
