--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta content='maximum-scale=1.0, initial-scale=1.0, width=device-width' name='viewport'>
-  <title>Home - Unifty</title>
+  <title>Cloud9 Art Studios Presents: The ArtFinity Artconomy</title>
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
@@ -531,7 +531,7 @@
 
       <div class="container-fluid featured-farms mb-5">
 
-      <!--  <div class="card farm-card">
+        <div class="card farm-card">
           <div class="card-header card-header-info card-header-icon">
             <div class="card-icon">
              <img src="https://gateway.ipfs.io/ipfs/Qmb1GJr934XxAbjoYEvtmsAVUUBGn5qts8mQNsbsQfspDV">
@@ -540,12 +540,12 @@
 
             </div>
           </div>
-        </div> -->
+        </div>
 
       </div>
 
       <h1>Featured Marketplaces</h1>
-      <h3>Selected marketplaces created with Unifty's Market Builder by 3rd parties</h3>
+      <h3>Selected marketplaces created with Cloud9's Market Builder by 3rd parties</h3>
 
       <div type="button" class="add-new-card-container" onclick="location.href='mailto:info@unifty.io?subject=Marketplace%20Listing%20Request&body=Hello%2C%0A%0AI%27d%20like%20to%20request%20a%20featured%20listing.%20Here%20are%20the%20details%3A%0A%0AProject%20name%3A%20%2A%2A%2A%20enter%20project%20name%20%2A%2A%2A%0A%0ALink%20to%20logo%3A%20%2A%2A%2A%20link%20to%20logo%2C%20please%20no%20image%20attachments%20%2A%2A%2A%0A%0AProject%20description%3A%20%2A%2A%2A%20a%20small%20description%20of%20your%20project%20%2A%2A%2A%0A%0ALink%20to%20marketplace%3A%20%2A%2A%2A%20full%20link%20to%20your%20marketplace%20%2A%2A%2A%0A%0A';">
                     <span class="material-icons">
@@ -584,7 +584,7 @@
 
 
       <h1 class="mt-5">Featured Farms</h1>
-      <h3>Selected farms created with Unifty's Farm Builder by 3rd parties</h3>
+      <h3>Selected farms created with Cloud9's Farm Builder by 3rd parties</h3>
 
       <div type="button" class="add-new-card-container" onclick="location.href='mailto:info@unifty.io?subject=Farm%20Listing%20Request&body=Hello%2C%0A%0AI%27d%20like%20to%20request%20a%20featured%20listing.%20Here%20are%20the%20details%3A%0A%0AProject%20name%3A%20%2A%2A%2A%20enter%20project%20name%20%2A%2A%2A%0A%0ALink%20to%20logo%3A%20%2A%2A%2A%20link%20to%20logo%2C%20please%20no%20image%20attachments%20%2A%2A%2A%0A%0AProject%20description%3A%20%2A%2A%2A%20a%20small%20description%20of%20your%20project%20%2A%2A%2A%0A%0ALink%28s%29%20to%20farm%28s%29%3A%20%2A%2A%2A%20full%20link%28s%29%20to%20your%20farm%28s%29%20%2A%2A%2A%0A%0A';">
                     <span class="material-icons">
@@ -592,12 +592,12 @@
                   </span>Request a Listing!
       </div>
       
-      <div class="container-fluid featured-farms">
+      <!--  <div class="container-fluid featured-farms">
 
 
 
 
-  <!--      <div class="card farm-card">
+      <div class="card farm-card">
           <div class="card-header card-header-info card-header-icon">
             <div class="card-icon">
               <img src="https://slinkyfinance.xyz/img/200.png">
