--- a/index.html
+++ b/index.html
@@ -444,8 +444,8 @@
 
           <div class="sidebar-text rights">
             <span>
-              <i class="material-icons">copyright</i>
-              Unifty Development d.o.o.<br/>All rights reserved.
+              <i class="material-icons">copyright 2021</i>
+              Cloud9 Dev Studio<br/>All rights reserved.
             </span>
           </div>
         </div>
@@ -475,7 +475,7 @@
 
       <!-- HEADER -->
       <div class="custom-header">
-        <div class="custom-header__title">Unifty.io</div>
+        <div class="custom-header__title">Cloud9 Art Studios</div>
         <div class="custom-header__dropdowns">
           <script>
             // fix for initial doubleclick required upon page load
@@ -526,8 +526,8 @@
       <h1>Newsflash: Market Builder Released!</h1>
       <h3 class="mb-5">Create and publish your own unstoppable decentralized NFT marketplace!<br/>Pro tip: <a href="https://github.com/Unifty/UniftyDapp" target="_blank">download our dApp</a> and host it yourself! Ideal for NFT artists &amp; projects!</h3>
 
-      <h1>Unifty Farms</h1>
-      <h3 class="mb-5">Farms by the Unifty project itself</h3>
+      <h1>Cloud9 Farms</h1>
+      <h3 class="mb-5">Farms by the Cloud9 project itself</h3>
 
       <div class="container-fluid featured-farms mb-5">
 
@@ -1530,7 +1530,7 @@
           <span class="material-icons-round">
             group
           </span>
-          About UNIFTY
+          About CLOUD9
         </a>
       </li>
 
