--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
       <h1>Cloud9 Farms</h1>
       <h3 class="mb-5">Farms by the Cloud9 project itself</h3>
 
-      <div class="container-fluid featured-farms mb-5">
+    <!--  <div class="container-fluid featured-farms mb-5">
 
         <div class="card farm-card">
           <div class="card-header card-header-info card-header-icon">
@@ -542,7 +542,7 @@
           </div>
         </div>
 
-      </div>
+      </div> -->
 
       <h1>Featured Marketplaces</h1>
       <h3>Selected marketplaces created with Cloud9's Market Builder by 3rd parties</h3>
@@ -591,7 +591,7 @@
                     add_circle
                   </span>Request a Listing!
       </div>
-      
+      </div>
       <!--  <div class="container-fluid featured-farms">
 
 
