--- a/index.html
+++ b/index.html
@@ -592,6 +592,7 @@
                   </span>Request a Listing!
       </div>
       </div>
+      </div>
       <!--  <div class="container-fluid featured-farms">
 
 
