--- a/index.html
+++ b/index.html
@@ -523,11 +523,11 @@
           Welcome to Cloud9 - The coolest Family of NFT platforms in existence!
         </p>
         </div>
-      <h1>Newsflash: Market Builder Released!</h1>
+     <!-- <h1>Newsflash: Market Builder Released!</h1>
       <h3 class="mb-5">Create and publish your own unstoppable decentralized NFT marketplace!<br/>Pro tip: <a href="https://github.com/Unifty/UniftyDapp" target="_blank">download our dApp</a> and host it yourself! Ideal for NFT artists &amp; projects!</h3>
-
+-->
       <h1>Cloud9 Farms</h1>
-      <h3 class="mb-5">Farms by the Cloud9 project itself</h3>
+      <h3 class="mb-5">Farms by the Cloud9 project itself</h3> -->
 
     <!--  <div class="container-fluid featured-farms mb-5">
 
@@ -546,7 +546,7 @@
 
       <h1>Featured Marketplaces</h1>
       <h3>Selected marketplaces created with Cloud9's Market Builder by 3rd parties</h3>
-
+<!--
       <div type="button" class="add-new-card-container" onclick="location.href='mailto:info@unifty.io?subject=Marketplace%20Listing%20Request&body=Hello%2C%0A%0AI%27d%20like%20to%20request%20a%20featured%20listing.%20Here%20are%20the%20details%3A%0A%0AProject%20name%3A%20%2A%2A%2A%20enter%20project%20name%20%2A%2A%2A%0A%0ALink%20to%20logo%3A%20%2A%2A%2A%20link%20to%20logo%2C%20please%20no%20image%20attachments%20%2A%2A%2A%0A%0AProject%20description%3A%20%2A%2A%2A%20a%20small%20description%20of%20your%20project%20%2A%2A%2A%0A%0ALink%20to%20marketplace%3A%20%2A%2A%2A%20full%20link%20to%20your%20marketplace%20%2A%2A%2A%0A%0A';">
                     <span class="material-icons">
                     add_circle
