--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta content='maximum-scale=1.0, initial-scale=1.0, width=device-width' name='viewport'>
-  <title>Home - Unifty</title>
+  <title>Cloud9 Art Studios Presents: The ArtFinity Artconomy</title>
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
@@ -415,20 +415,7 @@
             <i class="material-icons-round">help_center</i>
             <p>Guides & FAQ</p>
           </a>
-        </li>
-        <li class="nav-item" id="xdaiFarm">
-          <a class="nav-link" href="https://unifty.io/xdai/farm-view.html?address=0x87E5aFba16E3BEbd967699B4D5472B2ae1AA8Fa7">
-            <i class="material-icons">grass</i>
-            <p>Rares Farm - NIF (xDai)</p>
-          </a>
-        </li>
 
-        <li class="nav-item" id="genesisFarm">
-          <a class="nav-link" href="https://unifty.io/farm.html?farm=0xA2c88A39b1DE8f1d723d9E76AD07f6012826d0f3">
-            <i class="material-icons">grass</i>
-            <p>Genesis Farm - NIF-LP</p>
-          </a>
-        </li>
       </ul>
 
       <div class="sidebar-divider"></div>
@@ -457,8 +444,8 @@
 
           <div class="sidebar-text rights">
             <span>
-              <i class="material-icons">copyright</i>
-              Unifty Development d.o.o.<br/>All rights reserved.
+              <i class="material-icons">copyright 2021</i>
+              Cloud9 Dev Studio<br/>All rights reserved.
             </span>
           </div>
         </div>
@@ -488,7 +475,7 @@
 
       <!-- HEADER -->
       <div class="custom-header">
-        <div class="custom-header__title">Unifty.io</div>
+        <div class="custom-header__title">Cloud9 Art Studios</div>
         <div class="custom-header__dropdowns">
           <script>
             // fix for initial doubleclick required upon page load
@@ -533,141 +520,33 @@
       
       <div class="content__welcome-text">
         <p>
-          Welcome to Unifty - world of decentralized freedom!
-          We are multi-chain infrastructure platform, focusing on the creator economy. Our main target is developing, and
-          enabling fully decentralized no-code solutions for creators, with all things, and services around the NFT space. Mint,
-          buy, sell, swap, and create NFTs and NFT farms with just a few clicks, while you are fully owning your contracts.
+          Welcome to Cloud9 - The coolest Family of NFT platforms in existence!
         </p>
         </div>
-      <h1>Newsflash: Market Builder Released!</h1>
+     <!-- <h1>Newsflash: Market Builder Released!</h1>
       <h3 class="mb-5">Create and publish your own unstoppable decentralized NFT marketplace!<br/>Pro tip: <a href="https://github.com/Unifty/UniftyDapp" target="_blank">download our dApp</a> and host it yourself! Ideal for NFT artists &amp; projects!</h3>
+-->
+      <h1>Cloud9 Farms</h1>
+      <h3 class="mb-5">Farms by the Cloud9 project itself</h3> -->
 
-      <h1>Unifty Farms</h1>
-      <h3 class="mb-5">Farms by the Unifty project itself</h3>
-
-      <div class="container-fluid featured-farms mb-5">
+    <!--  <div class="container-fluid featured-farms mb-5">
 
         <div class="card farm-card">
           <div class="card-header card-header-info card-header-icon">
             <div class="card-icon">
-              <img src="https://gateway.ipfs.io/ipfs/Qmb1GJr934XxAbjoYEvtmsAVUUBGn5qts8mQNsbsQfspDV">
-            </div>
-          </div>
-          <div class="card-body">
-            <h3 class="card-title">Liquidity Farm (Mainnet)</h3>
-            <a class="btn btn-primary card-toggler first-collapsed" data-toggle="collapse" href="#multiCollapseDesc19" role="button" aria-expanded="false" aria-controls="multiCollapseDesc19">
-              Read more...
-            </a>
-            <div class="collapse multi-collapse" id="multiCollapseDesc19">
-              <p class="card-description">
-                Support Unifty and take part in our awesome liquidity incentive!
-              </p>
-            </div>
-            <a class="btn btn-primary card-toggler first-collapsed" data-toggle="collapse" href="#multiCollapseLinks19" role="button" aria-expanded="false" aria-controls="multiCollapseLinks19">
-              Open Farms
-            </a>
-            <div class="collapse multi-collapse" id="multiCollapseLinks19">
-              <a class="card-link"
-                 href="https://unifty.io/farm-view.html?address=0xC6AD13d8862b64346bCa42e966d93e0BB4bFF9F8"><i
-                      class="fa fa-external-link"></i>Open Farm, Ethereum</a>
+             <img src="https://gateway.ipfs.io/ipfs/Qmb1GJr934XxAbjoYEvtmsAVUUBGn5qts8mQNsbsQfspDV">
+           </div>
+         </div>
 
             </div>
           </div>
         </div>
 
-
-        <div class="card farm-card">
-          <div class="card-header card-header-info card-header-icon">
-            <div class="card-icon">
-              <img src="https://gateway.ipfs.io/ipfs/Qmb1GJr934XxAbjoYEvtmsAVUUBGn5qts8mQNsbsQfspDV">
-            </div>
-          </div>
-          <div class="card-body">
-            <h3 class="card-title">Liquidity Farm (BSC)</h3>
-            <a class="btn btn-primary card-toggler first-collapsed" data-toggle="collapse" href="#multiCollapseDesc20" role="button" aria-expanded="false" aria-controls="multiCollapseDesc20">
-              Read more...
-            </a>
-            <div class="collapse multi-collapse" id="multiCollapseDesc20">
-              <p class="card-description">
-                Support Unifty and take part in our awesome liquidity incentive!
-              </p>
-            </div>
-            <a class="btn btn-primary card-toggler first-collapsed" data-toggle="collapse" href="#multiCollapseLinks20" role="button" aria-expanded="false" aria-controls="multiCollapseLinks20">
-              Open Farms
-            </a>
-            <div class="collapse multi-collapse" id="multiCollapseLinks20">
-              <a class="card-link"
-                 href="https://unifty.io/bsc/farm-view.html?address=0xDf9ef53757687653d537Dd6726C2a9C239584dbE"><i
-                      class="fa fa-external-link"></i>Open Farm, BSC</a>
-
-            </div>
-          </div>
-        </div>
-
-
-        <div class="card farm-card">
-          <div class="card-header card-header-info card-header-icon">
-            <div class="card-icon">
-              <img src="https://unifty.io/assets/img/unifty2.png">
-            </div>
-          </div>
-          <div class="card-body">
-            <h3 class="card-title">Genesis NIF-LP Farm (Mainnet)</h3>
-            <a class="btn btn-primary card-toggler first-collapsed" data-toggle="collapse" href="#multiCollapseDesc21" role="button" aria-expanded="false" aria-controls="multiCollapseDesc21">
-              Read more...
-            </a>
-            <div class="collapse multi-collapse" id="multiCollapseDesc21">
-              <p class="card-description">
-                The very first Unifty farm. Stake NIF-LP for a variety of exclusive art and utility NFTs.
-              </p>
-            </div>
-            <a class="btn btn-primary card-toggler first-collapsed" data-toggle="collapse" href="#multiCollapseLinks21" role="button" aria-expanded="false" aria-controls="multiCollapseLinks21">
-              Open Farms
-            </a>
-            <div class="collapse multi-collapse" id="multiCollapseLinks21">
-              <a class="card-link"
-                 href="https://unifty.io/farm.html?farm=0xA2c88A39b1DE8f1d723d9E76AD07f6012826d0f3"><i
-                      class="fa fa-external-link"></i>Open Farm, Ethereum</a>
-
-            </div>
-          </div>
-        </div>
-
-
-        <div class="card farm-card">
-          <div class="card-header card-header-info card-header-icon">
-            <div class="card-icon">
-              <img src="https://unifty.io/assets/img/unifty2.png">
-            </div>
-          </div>
-          <div class="card-body">
-            <h3 class="card-title">Rares Farm (xDai)</h3>
-            <a class="btn btn-primary card-toggler first-collapsed" data-toggle="collapse" href="#multiCollapseDesc22" role="button" aria-expanded="false" aria-controls="multiCollapseDesc22">
-              Read more...
-            </a>
-            <div class="collapse multi-collapse" id="multiCollapseDesc22">
-              <p class="card-description">
-                Our rares farm exclusively on xDai. Watch out for new and rare pieces being dropped and be ready to grab them!<br/>
-                The NFTs may be bridged from xDai to Ethereum if desired by using our bridge.
-              </p>
-            </div>
-            <a class="btn btn-primary card-toggler first-collapsed" data-toggle="collapse" href="#multiCollapseLinks22" role="button" aria-expanded="false" aria-controls="multiCollapseLinks22">
-              Open Farms
-            </a>
-            <div class="collapse multi-collapse" id="multiCollapseLinks22">
-              <a class="card-link"
-                 href="https://unifty.io/xdai/farm-view.html?address=0x87E5aFba16E3BEbd967699B4D5472B2ae1AA8Fa7"><i
-                      class="fa fa-external-link"></i>Open Farm, xDai</a>
-
-            </div>
-          </div>
-        </div>
-
-      </div>
+      </div> -->
 
       <h1>Featured Marketplaces</h1>
-      <h3>Selected marketplaces created with Unifty's Market Builder by 3rd parties</h3>
-
+      <h3>Selected marketplaces created with Cloud9's Market Builder by 3rd parties</h3>
+<!--
       <div type="button" class="add-new-card-container" onclick="location.href='mailto:info@unifty.io?subject=Marketplace%20Listing%20Request&body=Hello%2C%0A%0AI%27d%20like%20to%20request%20a%20featured%20listing.%20Here%20are%20the%20details%3A%0A%0AProject%20name%3A%20%2A%2A%2A%20enter%20project%20name%20%2A%2A%2A%0A%0ALink%20to%20logo%3A%20%2A%2A%2A%20link%20to%20logo%2C%20please%20no%20image%20attachments%20%2A%2A%2A%0A%0AProject%20description%3A%20%2A%2A%2A%20a%20small%20description%20of%20your%20project%20%2A%2A%2A%0A%0ALink%20to%20marketplace%3A%20%2A%2A%2A%20full%20link%20to%20your%20marketplace%20%2A%2A%2A%0A%0A';">
                     <span class="material-icons">
                     add_circle
@@ -680,7 +559,7 @@
             <img src="https://i.ibb.co/XC1gjWT/IMG-20210529-144740-605.jpg">
           </div>
         </div>
-        <div class="card-body">
+      <div class="card-body">
           <h3 class="card-title">Anime Token</h3>
           <a class="btn btn-primary card-toggler first-collapsed" data-toggle="collapse" href="#multiCollapseDesc33" role="button" aria-expanded="false" aria-controls="multiCollapseDesc33">
             Read more...
@@ -705,20 +584,21 @@
 
 
       <h1 class="mt-5">Featured Farms</h1>
-      <h3>Selected farms created with Unifty's Farm Builder by 3rd parties</h3>
+      <h3>Selected farms created with Cloud9's Farm Builder by 3rd parties</h3>
 
       <div type="button" class="add-new-card-container" onclick="location.href='mailto:info@unifty.io?subject=Farm%20Listing%20Request&body=Hello%2C%0A%0AI%27d%20like%20to%20request%20a%20featured%20listing.%20Here%20are%20the%20details%3A%0A%0AProject%20name%3A%20%2A%2A%2A%20enter%20project%20name%20%2A%2A%2A%0A%0ALink%20to%20logo%3A%20%2A%2A%2A%20link%20to%20logo%2C%20please%20no%20image%20attachments%20%2A%2A%2A%0A%0AProject%20description%3A%20%2A%2A%2A%20a%20small%20description%20of%20your%20project%20%2A%2A%2A%0A%0ALink%28s%29%20to%20farm%28s%29%3A%20%2A%2A%2A%20full%20link%28s%29%20to%20your%20farm%28s%29%20%2A%2A%2A%0A%0A';">
                     <span class="material-icons">
                     add_circle
                   </span>Request a Listing!
       </div>
-      
-      <div class="container-fluid featured-farms">
+      </div>
+      </div>
+      <!--  <div class="container-fluid featured-farms">
 
 
 
 
-        <div class="card farm-card">
+      <div class="card farm-card">
           <div class="card-header card-header-info card-header-icon">
             <div class="card-icon">
               <img src="https://slinkyfinance.xyz/img/200.png">
@@ -746,10 +626,10 @@
           </div>
         </div>
 
+-->
 
 
-
-
+<!--
         <div class="card farm-card">
           <div class="card-header card-header-info card-header-icon">
             <div class="card-icon">
@@ -781,12 +661,12 @@
             </div>
           </div>
         </div>
+-->
 
 
 
 
-
-
+<!--
         <div class="card farm-card">
           <div class="card-header card-header-info card-header-icon">
             <div class="card-icon">
@@ -815,13 +695,13 @@
           </div>
         </div>
 
+-->
 
 
 
 
 
-
-        <div class="card farm-card">
+   <!--     <div class="card farm-card">
           <div class="card-header card-header-info card-header-icon">
             <div class="card-icon">
               <img src="https://hubstract.art/farm.jpg">
@@ -851,9 +731,9 @@
 
             </div>
           </div>
-        </div>
+        </div> -->
 
-        <div class="card farm-card">
+  <!--      <div class="card farm-card">
           <div class="card-header card-header-info card-header-icon">
             <div class="card-icon">
               <img src="https://thecrypto.show/shownft.png">
@@ -880,11 +760,11 @@
 
             </div>
           </div>
-        </div>
+        </div> -->
 
 
 
-        <div class="card farm-card">
+         <!--        <div class="card farm-card">
           <div class="card-header card-header-info card-header-icon">
             <div class="card-icon">
               <img src="https://i.ibb.co/g7ngCBg/photo-2021-03-12-10-37-38.jpg">
@@ -910,7 +790,7 @@
 
             </div>
           </div>
-        </div>
+        </div> -->
 
         <!--
         <div class="card farm-card">
@@ -951,7 +831,7 @@
           </div>
         </div>-->
 
-        <div class="card farm-card">
+      <!--  <div class="card farm-card">
           <div class="card-header card-header-info card-header-icon">
             <div class="card-icon">
               <img src="https://unifty.io/assets/img/srn.jpg">
@@ -991,7 +871,7 @@
                       class="fa fa-external-link"></i>$SACT-BNB LP, BSC</a>
             </div>
           </div>
-        </div>
+        </div> -->
 
 <!--
         <div class="card farm-card">
@@ -1022,7 +902,7 @@
 
 
 
-        <div class="card farm-card">
+    <!--    <div class="card farm-card">
           <div class="card-header card-header-info card-header-icon">
             <div class="card-icon">
               <img src="https://pbs.twimg.com/profile_images/1362796116711010310/L-AEtKb-_400x400.jpg">
@@ -1081,10 +961,10 @@
             </div>
           </div>
         </div>
+-->
 
 
-
-        <div class="card farm-card">
+    <!--    <div class="card farm-card">
           <div class="card-header card-header-info card-header-icon">
             <div class="card-icon">
               <img src="https://img1.wsimg.com/blobby/go/33b3b78f-4f18-4d01-8a66-73cfe79c6dc2/downloads/bitsenji_LOGO.jpeg?ver=1617523409718">
@@ -1155,7 +1035,7 @@
         </div>-->
 
 
-        <div class="card farm-card">
+    <!--    <div class="card farm-card">
           <div class="card-header card-header-info card-header-icon">
             <div class="card-icon">
               <img src="https://degenerate.money/market/assets/img/unifty2.png">
@@ -1240,7 +1120,7 @@
 
             </div>
           </div>
-        </div>
+        </div> -->
 
 <!--
         <div class="card farm-card">
@@ -1274,7 +1154,7 @@
           </div>
         </div>-->
 
-        <div class="card farm-card">
+   <!--     <div class="card farm-card">
           <div class="card-header card-header-info card-header-icon">
             <div class="card-icon">
               <img src="https://unifty.io/assets/img/mcdc.jpg">
@@ -1510,7 +1390,7 @@
                           class="fa fa-external-link"></i>$HNY/$COLD LP RARES, xDai</a><br />
                       <!--<a class="card-link"
                         href="https://unifty.io/xdai/farm-view.html?address=0x5d004F2576465aEa90328bCcC219cC8b4873cC53"><i
-                          class="fa fa-external-link"></i>$COLD / NSFW!!, xDai</a><br />-->
+                          class="fa fa-external-link"></i>$COLD / NSFW!!, xDai</a><br />
                       <a class="card-link"
                         href="https://unifty.io/xdai/farm-view.html?address=0x305dc5048d9680d8b93a60Fd9f0054Bb0F6C5B19"><i
                           class="fa fa-external-link"></i>$COLD / Music, xDai</a><br />
@@ -1524,7 +1404,7 @@
                   </div>
                 </div>
               </div>
-
+-->
         <!--
               <div class="card farm-card">
                 <div class="card-header card-header-info card-header-icon">
@@ -1558,11 +1438,11 @@
                     <a class="card-link" href="https://www.cryptovoxels.com/play?coords=S@238W,649S" target="_blank"><i class="fa fa-home"></i>Web</a>
                   </div>
                 </div>
-              </div>-->
+              </div>
 
           </div>
 
-        </div>
+        </div> -->
 
         <!-- ALERT -->
         <div class="modal fade" style="overflow-y: scroll;" id="alertModal" tabindex="-1" role="dialog"
@@ -1651,7 +1531,7 @@
           <span class="material-icons-round">
             group
           </span>
-          About UNIFTY
+          About CLOUD9
         </a>
       </li>
 
